feat: endpoint de reportes de calificaciones
